test/tests/stages/9_functions/valid/no_arguments/function_shadows_variable.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: foo
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 3
                      None: 
                    None: 
                  Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: bar
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 4
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CGreaterThan: 
                  CBinary: 
                    CAdd: 
                    CVar: 
                      TIdentifier: foo
                      None: 
                    CVar: 
                      TIdentifier: bar
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 0
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[2]: 
                      CD: 
                        CFunDecl: 
                          CFunctionDeclaration: 
                            TIdentifier: foo
                            List[0]: 
                            None: 
                            FunType: 
                              TULong: 67108864
                              TULong: 67108864
                              List[0]: 
                              Int: 
                            None: 
                      CS: 
                        CExpression: 
                          CAssignment: 
                            None: 
                            CVar: 
                              TIdentifier: bar
                              None: 
                            CFunctionCall: 
                              TIdentifier: foo
                              List[0]: 
                              None: 
                            None: 
                None: 
            CS: 
              CReturn: 
                CBinary: 
                  CAdd: 
                  CVar: 
                    TIdentifier: foo
                    None: 
                  CVar: 
                    TIdentifier: bar
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 8
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
